--- a/main.css
+++ b/main.css
@@ -6,7 +6,7 @@
 
 body {
     /* background-color: #212121; */
-    color: #212121;
+    color: #6770f9;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -25,7 +25,7 @@ form {
     row-gap: 0em;
     padding: 0em;
     margin: 0em;
-    border: 1px solid #212121;
+    border: 2px solid #212121;
     border-radius: 20px;
     width: 90%;
 }
@@ -64,8 +64,8 @@ column {
 .input-1 {
     padding: 1em;
     border-top: 0px solid #212121;
-    border-bottom: 1px solid #212121;
-    border-right: 1px solid #212121;
+    border-bottom: 2px solid #212121;
+    border-right: 2px solid #212121;
     border-left: 0px solid #212121;
     border-top-left-radius: 20px;
     width: 100%;
@@ -79,7 +79,7 @@ column {
 .input-2 {
     padding: 1em;
     border-top: 0px solid #212121;
-    border-bottom: 1px solid #212121;
+    border-bottom: 2px solid #212121;
     border-right: 0px solid #212121;
     border-left: 0px solid #212121;
     border-top-right-radius: 20px;
@@ -104,11 +104,13 @@ column {
 select {
     border: 0em;
     text-align: left;
+    color: #6770f9;
+    background-color: #fff;
 }
 
 .button {
     color: #fff;
-    background-color: #212121;
+    background-color: #6770f9;
     width: 70%;
     height: 3em;
     border: 0px;
@@ -122,7 +124,7 @@ select {
 }
 
 .button:active {
-    background-color: #414141;
+    background-color: #4e59ff;
 }
 
 .check {
