--- a/main.css
+++ b/main.css
@@ -220,6 +220,9 @@ footer {
 }
 
 @media only screen and (max-width: 420px) {
+    footer row {
+        flex-direction: row;
+    }
     select {
         width: 100%;
     }
